src/payo-backend/k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: payo-backend-service
  namespace: payo-prod
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing

spec:
  type: LoadBalancer

  selector:
    app: payo-backend

  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
